tower of hanoi stuff

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %} {% block title %}Main page{% endblock %} {% block content
-%}
+{% extends "base.html" %} 
+
+{% block title %}
+<title>Main page</title>
+{% endblock %} 
+
+{% block content %}
 <h1 align="center">Zuckerburger website</h1>
 {% endblock %}
