--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <title>{% block title %}Zuckerburger website{% endblock %}</title>
+    {% block head %}{% endblock %}
   </head>
   <body>
    
@@ -36,8 +36,8 @@
       </button>
     </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
-
-    <div class="container">{% block content %} {% endblock %}</div>
+    {% block content %} {% endblock %}
+    <div class="container"></div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
